--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "rest-test",
   "displayName": "REST TEST",
   "description": "",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publisher": "GopherAmol",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gopher-amol/rest-test"
+  },
   "engines": {
     "vscode": "^1.60.0"
   },
