--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-test",
   "displayName": "REST TEST",
   "description": "",
-  "version": "2.7.0",
+  "version": "2.8.3",
   "publisher": "GopherAmol",
   "license": "MIT",
   "repository": {
@@ -36,10 +36,72 @@
         }
       ]
     },
+    "menus": {
+      "view/title": [
+        {
+          "command": "restApiTest.sendRequest",
+          "when": "view == restApiTesterView",
+          "group": "navigation"
+        },
+        {
+          "command": "restApiTest.refreshView",
+          "when": "view == restApiTesterView",
+          "group": "navigation"
+        },
+        {
+          "command": "restApiTest.clearHistory",
+          "when": "view == restApiTesterView",
+          "group": "2_history"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "restApiTest.renameHistoryRequest",
+          "when": "view == restApiTesterView && viewItem == historyRequest",
+          "group": "1_historyActions"
+        },
+        {
+          "command": "restApiTest.deleteHistoryRequest",
+          "when": "view == restApiTesterView && viewItem == historyRequest",
+          "group": "1_historyActions"
+        },
+        {
+          "command": "restApiTest.executeHistoryRequest",
+          "when": "view == restApiTesterView && viewItem == historyRequest",
+          "group": "navigation"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "restApiTest.sendRequest",
-        "title": "REST TEST"
+        "title": "Send New Request",
+        "icon": "$(add)"
+      },
+      {
+        "command": "restApiTest.refreshView",
+        "title": "Refresh",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "restApiTest.executeHistoryRequest",
+        "title": "Execute Request",
+        "icon": "$(play)"
+      },
+      {
+        "command": "restApiTest.renameHistoryRequest",
+        "title": "Rename Request",
+        "icon": "$(edit)"
+      },
+      {
+        "command": "restApiTest.deleteHistoryRequest",
+        "title": "Delete Request",
+        "icon": "$(trash)"
+      },
+      {
+        "command": "restApiTest.clearHistory",
+        "title": "Clear All History",
+        "icon": "$(clear-all)"
       }
     ]
   },
