--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rest-test",
   "displayName": "REST TEST",
-  "description": "High-performance REST API testing extension for VS Code with lightning-fast UI, smooth animations, and comprehensive request management",
-  "version": "3.2.0",
+  "description": "Professional REST & GraphQL API testing extension for VS Code with clean Postman-inspired UI, fast performance, and comprehensive request management",
+  "version": "3.3.0",
   "publisher": "GopherAmol",
   "license": "MIT",
   "repository": {
