fix: headers not being detected due to incorrect input selection
The collectParams function was using getElementsByTagName('input') which
returns all inputs including checkboxes. Since param rows now have a
checkbox input, the function was reading wrong values:
- inputs[0] was the checkbox (not the key)
- inputs[1] was the key (not the value)

Fixed by using querySelectorAll('input[type="text"]') to only select
text inputs, and also added support for the enabled/disabled state.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-test",
   "displayName": "REST TEST",
   "description": "Professional REST & GraphQL API testing extension for VS Code with clean Postman-inspired UI, fast performance, and comprehensive request management",
-  "version": "3.5.0",
+  "version": "3.5.2",
   "publisher": "GopherAmol",
   "license": "MIT",
   "repository": {
@@ -16,7 +16,9 @@
     "Other"
   ],
   "icon": "resources/icon.png",
-  "activationEvents": [],
+  "activationEvents": [
+    "*"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "viewsContainers": {
